--- a/projeto_lets_code/projeto.ipynb
+++ b/projeto_lets_code/projeto.ipynb
@@ -1063,7 +1063,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CONFIRMADOS = 0\n",
+    "OBITOS = 1\n",
+    "RECUPERADOS = 2\n",
+    "ATIVOS = 3\n",
+    "DATA = 4\n"
+   ]
   },
   {
    "cell_type": "code",
